j--/tests/pass/DivAssign.java
package pass;

public class DivAssign {
	public int eval(int a, int b) {
		a /= b;
		return a;
	}
}
