j--/tests/fail/DivAssign.java
package fail;

public class DivAssign {

	public static void main(String args[]) {
		System.out.println("c" /= "b");
	}

}
